{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 22,
  "lineage": "b6cb2b43-5b64-07d6-24b9-7590e89ed4a6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-093c5c2f2c08aa203",
            "arn": "arn:aws:ec2:us-east-1:676972756715:elastic-ip/eipalloc-093c5c2f2c08aa203",
            "association_id": "eipassoc-06c0aad04cdac947f",
            "domain": "vpc",
            "id": "eipalloc-093c5c2f2c08aa203",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0dacc15ecedc51e79",
            "private_dns": "ip-10-0-1-240.ec2.internal",
            "private_ip": "10.0.1.240",
            "public_dns": "ec2-100-49-174-4.compute-1.amazonaws.com",
            "public_ip": "100.49.174.4",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "676972756715",
            "id": "eipalloc-093c5c2f2c08aa203",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "caller",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c0717dff8dafd4ca",
            "arn": "arn:aws:ec2:us-east-1:676972756715:instance/i-01fdece6e200be1fd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01fdece6e200be1fd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "alchemyst-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-061247899c7799981"
              }
            ],
            "primary_network_interface_id": "eni-061247899c7799981",
            "private_dns": "ip-10-0-1-24.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.24",
            "public_dns": "ec2-18-214-40-205.compute-1.amazonaws.com",
            "public_ip": "18.214.40.205",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a49cab79e450f746",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02c61317c48cac012",
            "tags": {
              "Name": "caller-worker"
            },
            "tags_all": {
              "Name": "caller-worker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c97c46db21021a73"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "676972756715",
            "id": "i-01fdece6e200be1fd",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.main",
            "aws_security_group.caller",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "inference",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c0717dff8dafd4ca",
            "arn": "arn:aws:ec2:us-east-1:676972756715:instance/i-0d73502d5b898c82e",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d73502d5b898c82e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "alchemyst-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-035bba72a998379f7"
              }
            ],
            "primary_network_interface_id": "eni-035bba72a998379f7",
            "private_dns": "ip-10-0-2-244.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.244",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f7437f158fd1f1ac",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-002face529c6cab06",
            "tags": {
              "Name": "inference-worker"
            },
            "tags_all": {
              "Name": "inference-worker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f881db5a201dc912"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "676972756715",
            "id": "i-0d73502d5b898c82e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.main",
            "aws_security_group.caller",
            "aws_security_group.inference",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:676972756715:internet-gateway/igw-0cb958e2d3936f963",
            "id": "igw-0cb958e2d3936f963",
            "owner_id": "676972756715",
            "region": "us-east-1",
            "tags": {
              "Name": "alchemyst-igw"
            },
            "tags_all": {
              "Name": "alchemyst-igw"
            },
            "vpc_id": "vpc-03b99fd32e9be4e82"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "676972756715",
            "id": "igw-0cb958e2d3936f963",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-093c5c2f2c08aa203",
            "association_id": "eipassoc-06c0aad04cdac947f",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0d1c4a5eabb301d44",
            "network_interface_id": "eni-0dacc15ecedc51e79",
            "private_ip": "10.0.1.240",
            "public_ip": "100.49.174.4",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02c61317c48cac012",
            "tags": {
              "Name": "alchemyst-nat"
            },
            "tags_all": {
              "Name": "alchemyst-nat"
            },
            "vpc_id": "vpc-03b99fd32e9be4e82"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "676972756715",
            "id": "nat-0d1c4a5eabb301d44",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:676972756715:route-table/rtb-0c72014deab7c467c",
            "id": "rtb-0c72014deab7c467c",
            "owner_id": "676972756715",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d1c4a5eabb301d44",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "alchemyst-private-rt"
            },
            "tags_all": {
              "Name": "alchemyst-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-03b99fd32e9be4e82"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "676972756715",
            "id": "rtb-0c72014deab7c467c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:676972756715:route-table/rtb-05580d12538ea3250",
            "id": "rtb-05580d12538ea3250",
            "owner_id": "676972756715",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cb958e2d3936f963",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "alchemyst-public-rt"
            },
            "tags_all": {
              "Name": "alchemyst-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-03b99fd32e9be4e82"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "676972756715",
            "id": "rtb-05580d12538ea3250",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03fd8d5d6f2918c1b",
            "region": "us-east-1",
            "route_table_id": "rtb-0c72014deab7c467c",
            "subnet_id": "subnet-002face529c6cab06"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "676972756715",
            "id": "rtbassoc-03fd8d5d6f2918c1b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0606b64f226b9ab52",
            "region": "us-east-1",
            "route_table_id": "rtb-05580d12538ea3250",
            "subnet_id": "subnet-02c61317c48cac012"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "676972756715",
            "id": "rtbassoc-0606b64f226b9ab52",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "caller",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:676972756715:security-group/sg-0c97c46db21021a73",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c97c46db21021a73",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "caller-sg",
            "name_prefix": "",
            "owner_id": "676972756715",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "caller-sg"
            },
            "tags_all": {
              "Name": "caller-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03b99fd32e9be4e82"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "676972756715",
            "id": "sg-0c97c46db21021a73",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "inference",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:676972756715:security-group/sg-0f881db5a201dc912",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f881db5a201dc912",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c97c46db21021a73"
                ],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c97c46db21021a73"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "inference-sg",
            "name_prefix": "",
            "owner_id": "676972756715",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "inference-sg"
            },
            "tags_all": {
              "Name": "inference-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03b99fd32e9be4e82"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "676972756715",
            "id": "sg-0f881db5a201dc912",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.caller",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:676972756715:subnet/subnet-002face529c6cab06",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002face529c6cab06",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "676972756715",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "alchemyst-private"
            },
            "tags_all": {
              "Name": "alchemyst-private"
            },
            "vpc_id": "vpc-03b99fd32e9be4e82"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "676972756715",
            "id": "subnet-002face529c6cab06",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:676972756715:subnet/subnet-02c61317c48cac012",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c61317c48cac012",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "676972756715",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "alchemyst-public"
            },
            "tags_all": {
              "Name": "alchemyst-public"
            },
            "vpc_id": "vpc-03b99fd32e9be4e82"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "676972756715",
            "id": "subnet-02c61317c48cac012",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:676972756715:vpc/vpc-03b99fd32e9be4e82",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03f8c774fb8a3816f",
            "default_route_table_id": "rtb-064a8649ddd9ec331",
            "default_security_group_id": "sg-0ebb8ce7531e9419f",
            "dhcp_options_id": "dopt-02c30a8e95e07ab59",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03b99fd32e9be4e82",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-064a8649ddd9ec331",
            "owner_id": "676972756715",
            "region": "us-east-1",
            "tags": {
              "Name": "alchemyst-vpc"
            },
            "tags_all": {
              "Name": "alchemyst-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "676972756715",
            "id": "vpc-03b99fd32e9be4e82",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}